*Edge*

* Fixed FormTagHelper#submit_tag with :disable_with option wouldn't submit the button's value when was clicked #633 [Jose Fernandez]

* Stopped logging template compiles as it only clogs up the log [DHH]

* Changed the X-Runtime header to report in milliseconds [DHH]

* Changed BenchmarkHelper#benchmark to report in milliseconds [DHH]

* Changed logging format to be millisecond based and skip misleading stats [DHH]. Went from:

    Completed in 0.10000 (4 reqs/sec) | Rendering: 0.04000 (40%) | DB: 0.00400 (4%) | 200 OK [http://example.com]

  ...to:
  
    Completed in 100ms (View: 40, DB: 4) | 200 OK [http://example.com]

* Add support for shallow nesting of routes. #838 [S. Brent Faulkner]

  Example :

  map.resources :users, :shallow => true do |user|
    user.resources :posts
  end

  - GET /users/1/posts (maps to PostsController#index action as usual)
    named route "user_posts" is added as usual.

  - GET /posts/2 (maps to PostsController#show action as if it were not nested)
    Additionally, named route "post" is added too.

* Added button_to_remote helper.  #3641 [Donald Piret, Tarmo Tänav]

* Deprecate render_component. Please use render_component plugin from http://github.com/rails/render_component/tree/master [Pratik]

* Routes may be restricted to lists of HTTP methods instead of a single method or :any.  #407 [Brennan Dunn, Gaius Centus Novus]
    map.resource :posts, :collection => { :search => [:get, :post] }
    map.session 'session', :requirements => { :method => [:get, :post, :delete] }

* Deprecated implicit local assignments when rendering partials [Josh Peek]

* Introduce current_cycle helper method to return the current value without bumping the cycle.  #417 [Ken Collins]

* Allow polymorphic_url helper to take url options. #880 [Tarmo Tänav]

* Switched integration test runner to use Rack processor instead of CGI [Josh Peek]

* Made AbstractRequest.if_modified_sense return nil if the header could not be parsed [Jamis Buck]
