@@ -1,5 +1,7 @@
 *Edge*
 
+* Added FormTagHelper#image_submit_tag confirm option #784 [Alastair Brunton]
+
 * Fixed FormTagHelper#submit_tag with :disable_with option wouldn't submit the button's value when was clicked #633 [Jose Fernandez]
 
 * Stopped logging template compiles as it only clogs up the log [DHH]
